--- a/Programacao_Trabalho03/.classpath
+++ b/Programacao_Trabalho03/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Vanila/Desktop/BrowseSubmarino.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Vanila/Desktop/SomLivreCon.jar"/>
+	<classpathentry kind="lib" path="C:/Jars/BrowseSubmarino.jar"/>
+	<classpathentry kind="lib" path="C:/Jars/SomLivreCon.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
